--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <!-- End Landing -->
     <!-- Start Services -->
-    <div class="services">
+    <div class="services" id="Services">
         <div class="container">
             <div class="main-heading">
                 <h2>Services</h2>
@@ -117,7 +117,7 @@
       </div>
       <!-- End Design -->
       <!-- Start portfolio -->
-      <div class="portfolio">
+      <div class="portfolio" id="Portfolio">
         <div class="container">
             <div class="main-heading">
                 <h2>Portfolio</h2>
@@ -205,7 +205,7 @@
       </div>
       <!-- End video -->
       <!-- Start About -->
-      <div class="about">
+      <div class="about" id="About">
         <div class="container">
             <div class="main-heading">
                 <h2>About Us</h2>
@@ -315,7 +315,7 @@
       </div>
       <!-- End Quote -->
       <!-- Start Pricing -->
-      <div class="pricing">
+      <div class="pricing" id="Pricing">
         <div class="container">
           <div class="main-heading">
             <h2>Pricing</h2>
@@ -406,7 +406,7 @@
       </div>
       <!-- End Subscribe -->
       <!-- Start Contact -->
-      <div class="contact">
+      <div class="contact" id="Contact">
         <div class="container">
           <div class="main-heading">
             <h2>Contact Us</h2>
